Fixes alignment of buttons

--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -17,4 +17,6 @@
 
 .sidenav-container{
   margin-top: 50px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
